--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <div class="wrapper">
     <body>
       <header class="main-header">
-        <img class="logo" src="images/vector/logo.svg" width="140" height="70" alt="Логотип Седоны.">
+        <img class="logo" src="images/vector-files/logo.svg" width="140" height="70" alt="Логотип Седоны.">
         <nav class="navigation">
           <ul class="navigation-list">
             <li class="navigation-item">
@@ -25,7 +25,7 @@
             <ul class="navigation-list navigation-user">
               <li class="navigation-item">
                 <a class="navigation-link" href="#">
-                  <img class="serch" src="images/vector/serch.svg" alt="Поиск">
+                  <img class="serch" src="images/vector-files/serch.svg" alt="Поиск">
                   <span class="visually-hidden">
                     Поиск
                   </span>
@@ -33,7 +33,7 @@
               </li>
               <li class="navigation-item">
                 <a class="navigation-link" href="#">
-                  <img class="favorite" src="images/vector/favorite.svg" alt="В избранном">
+                  <img class="favorite" src="images/vector-files/heart.svg alt="В избранном">
                   <span class="visually-hidden">Избранное</span>
                   <div class="count-favorites">
                     <span class="count">12</span>
@@ -50,8 +50,8 @@
       <main class="main-index">
         <section class="description">
           <h1 class="visually-hidden">Город СЕДОНА</h1>
-          <img class="welcom-Sedona" width="457" height="352" src="images/vector/welcome.svg" alt="Добро пожаловать в Седону.">
-          <img class="background-index" src="images/photos/index-background-min.jpg" width="1200" height="485" alt="фоновое изображение">
+          <img class="welcom-sedona" width="457" height="352" src="images/vector-files/welcome.svg" alt="Добро пожаловать в Седону.">
+
           <h2>СЕДОНА - НЕБОЛЬШОЙ ГОРОДОК В АРИЗОНЕ, ЗАСЛУЖИВАЮЩИЙ БОЛЬШЕГО!</h2>
           <p>Рассмотрим причины, по которым Седона круче, чем Гранд-каньон!</p>
         </section>
@@ -113,7 +113,7 @@
         <section class="subscribe">
           <h2>ПОДПИШИТЕСЬ НА РАССЫЛКУ</h2>
           <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
-          <img class="subscribe-picture" src="images/png/Subscribe.png" width="1200" height="414" alt="фоновое изображение.">
+
           <form class="newsletter-form" action="https://echo.htmlacademy.ru" method="post">
             <label class="visually-hidden" for="newsletter-email">
               Введите Ваш e-mail
@@ -131,19 +131,19 @@
             <li class="footer-sosial-item">
               <a class="button" href="https://vk.com/htmlacademy">
                 <span class="visually-hidden">Вконтакте</span>
-                <img src="images/vector/vk.svg" alt="Вконтакте">
+                <img src="images/vector-files/vk.svg" alt="Вконтакте">
               </a>
             </li>
             <li class="footer-sosial-item">
               <a class="button" href="https://t.me/htmlacademy ">
                 <span class="visually-hidden">Телеграм</span>
-                <img src="images/vector/tg.svg" alt="Телеграм">
+                <img src="images/vector-files/tg.svg" alt="Телеграм">
               </a>
             </li>
             <li class="footer-sosial-item">
               <a class="button" href="https://www.youtube.com/user/htmlacademyru">
                 <span class="visually-hidden">Ютуб</span>
-                <img src="images/vector/utube.svg" alt="Ютуб">
+                <img src="images/vector-files/utube.svg" alt="Ютуб">
               </a>
             </li>
           </ul>
@@ -157,7 +157,7 @@
 
           <span class="visually-hidden">Логотип</span>
           <a href="https://htmlacademy.ru/">
-            <img src="images/vector/logo_htmlacademy.svg" alt="HTML-logo">
+            <img src="images/vector-fils/logo-htmlacademy.svg" alt="HTML-logo">
           </a>
 
 
