--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header class="main-header">
-    <img src="images/vector/logo.svg" width="140" height="70" alt="Логотип Седоны.">
+    <img src="images/vector-fils/logo.svg" width="140" height="70" alt="Логотип Седоны.">
     <nav class="navigation">
       <ul class="navigation-list">
         <li class="navigation-item">
@@ -24,7 +24,7 @@
         <ul class="navigation-list navigation-user">
           <li class="navigation-item">
             <a class="navigation-link" href="#">
-                                <img class="serch" src="images/vector/serch.svg" alt="Поиск">
+                <img class="serch" src="images/vector-fils/serch.svg" alt="Поиск">
               <span class="visually-hidden">
                 Поиск
               </span>
@@ -33,7 +33,7 @@
           <li class="navigation-item">
             <a class="navigation-link" href="#">
               <span class="visually-hidden">Избранное</span>
-              <img class="favorite" src="images/vector/favorite.svg" alt="В избранном">
+              <img class="favorite" src="images/vector-fils/heart.svg" alt="В избранном">
               <div class="count-favorites">
                 <span class="count">12</span>
               </div>
@@ -53,7 +53,7 @@
     <main class="main-inner">
         <header class="inner-header">
             <h1 class="inner-header-title">Гостиницы Седоны</h1>
-            <img class="background-picture" src="images/png/catalog-back.png" width="1200" height="476" alt="#">
+
             <ul class="breadcrumbs">
                 <li class="breadcrumbs-item">
                   <span class="visually-hidden"><a class="breadcrumbs-link" href="index.html">Главная</a>
@@ -118,13 +118,12 @@
               </ul>
             </fieldset>
 
-            <fieldset class="catalog-price">
+            <!-- <fieldset class="catalog-price">
               <p><input type="text" placeholder="От" value="0"></p>
               <p><input type="text" placeholder="До" value="9000"></p>
               <legend class="catalog-filter-price">Стоимость, ₽ </legend>
-              <!-- не смогла разобраться с фильтрами до конца -->
+              не смогла разобраться с фильтрами до конца -->
 
-            </fieldset>
 
             <button class="button" type="submit">Применить</button>
             <button class="button" type="reset">Сбросить</button>
@@ -149,7 +148,7 @@
             <ul class="product-list">
               <li class="product-card">
                 <a class="product-card-link" href="#">
-                  <img class="product-card-img" src="images/photos/Amara-Resort.jpg" width="300" height="212" alt="Amara Resort & Spa">
+                  <img class="product-card-img" src="images/photos/amara-rsort.jpg" width="300" height="212" alt="вид на звездное недо через ущелье">
                     <h3 class="product-card-item">Amara Resort & Spa</h3>
                 </a>
                 <span class="product-card-price">Гостиница от 4000 ₽</span>
@@ -162,7 +161,7 @@
 
               <li class="product-card">
                 <a class="product-card-link" href="#">
-                  <img class="product-card-img" src="images/photos/Villas-at-Poco-Diablo.jpg" width="300" height="212" alt="Villas at Poco Diablo">
+                  <img class="product-card-img" src="images/photos/villas-at-poco-diablo.jpg" width="300" height="212" alt="вид на горы и радугу">
                     <h3 class="product-card-item">Villas at Poco Diablo</h3>
                 </a>
                 <span class="product-card-price">Гостиница от 5000 ₽</span>
@@ -174,7 +173,7 @@
 
               <li class="product-card">
                 <a class="product-card-link" href="#">
-                  <img class="product-card-img" src="images/photos/Desert-Quail.jpg" width="300" height="212" alt="Desert Quail Inn">
+                  <img class="product-card-img" src="images/photos/desert-quail.jpg" width="300" height="212" alt="вид на горы днем">
                   <h3 class="product-card-item">Desert Quail Inn</h3>
                 </a>
                 <span class="product-card-price">Гостиница от 2500 ₽</span>
@@ -186,7 +185,7 @@
 
               <li class="product-card">
                 <a class="product-card-link" href="catalog.html">
-                  <img class="product-card-img" src="images/photos/GreenTree-Inn.jpg" width="300" height="212" alt="GreenTree Inn">
+                  <img class="product-card-img" src="images/photos/green-tree-inn.jpg" width="300" height="212" alt="вид на горы и ночное небо">
                   <h3 class="product-card-item">GreenTree Inn</h3>
                 </a>
                 <span class="product-card-price">Гостиница от 1500 ₽</span>
@@ -211,7 +210,7 @@
                 <a class="pagination-link" href="#">4</a>
               </li>
               <li class="pagination-item">
-                <a class="pagination-link" href="#">...</a>
+                ...
               </li>
               <li class="pagination-item">
                 <a class="pagination-link" href="#">10</a>
@@ -220,9 +219,10 @@
         </section>
 
 
-        <section class="subscribe">
+        <section class="subscribe-catalog">
           <h2>ПОДПИШИТЕСЬ НА РАССЫЛКУ</h2>
           <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
+
           <form class="newsletter-form" action="https://echo.htmlacademy.ru" method="post">
             <label class="visually-hidden" for="newsletter-email">
               Введите Ваш e-mail
@@ -236,23 +236,26 @@
   <footer class="catalog-footer">
     <section class="footer-sosial-catalog">
       <h1 class="visually-hidden">Социальные сети</h1>
-      <ul class="footer-sosial-list">
-        <li class="footer-sosial-item">
-          <a class="button" href="https://vk.com/htmlacademy">
-            <span class="visually-hidden">Вконтакте</span>
-          </a>
-        </li>
-        <li class="footer-sosial-item">
-          <a class="button" href="https://t.me/htmlacademy ">
-            <span class="visually-hidden">Телеграм</span>
-          </a>
-        </li>
-        <li class="footer-sosial-item">
-          <a class="button" href="https://www.youtube.com/user/htmlacademyru">
-            <span class="visually-hidden">Ютуб</span>
-          </a>
-        </li>
-      </ul>
+          <ul class="footer-sosial-list">
+            <li class="footer-sosial-item">
+              <a class="button" href="https://vk.com/htmlacademy">
+                <span class="visually-hidden">Вконтакте</span>
+                <img src="images/vector-fils/vk.svg" alt="Вконтакте">
+              </a>
+            </li>
+            <li class="footer-sosial-item">
+              <a class="button" href="https://t.me/htmlacademy ">
+                <span class="visually-hidden">Телеграм</span>
+                <img src="images/vector-fils/tg.svg" alt="Телеграм">
+              </a>
+            </li>
+            <li class="footer-sosial-item">
+              <a class="button" href="https://www.youtube.com/user/htmlacademyru">
+                <span class="visually-hidden">Ютуб</span>
+                <img src="images/vector-fils/utube.svg" alt="Ютуб">
+              </a>
+            </li>
+          </ul>
     </section>
 
     <section class="contacts">
