--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header class="main-header">
-    <img src="images/vector-fils/logo.svg" width="140" height="70" alt="Логотип Седоны.">
+    <img src="images/vector-files/logo.svg" width="140" height="70" alt="Логотип Седоны.">
     <nav class="navigation">
       <ul class="navigation-list">
         <li class="navigation-item">
@@ -24,7 +24,7 @@
         <ul class="navigation-list navigation-user">
           <li class="navigation-item">
             <a class="navigation-link" href="#">
-                <img class="serch" src="images/vector-fils/serch.svg" alt="Поиск">
+                <img class="serch" src="images/vector-files/serch.svg" alt="Поиск">
               <span class="visually-hidden">
                 Поиск
               </span>
@@ -33,7 +33,7 @@
           <li class="navigation-item">
             <a class="navigation-link" href="#">
               <span class="visually-hidden">Избранное</span>
-              <img class="favorite" src="images/vector-fils/heart.svg" alt="В избранном">
+              <img class="favorite" src="images/vector-files/heart.svg" alt="В избранном">
               <div class="count-favorites">
                 <span class="count">12</span>
               </div>
