--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               </li>
               <li class="navigation-item">
                 <a class="navigation-link" href="#">
-                  <img class="favorite" src="images/vector-files/heart.svg alt="В избранном">
+                  <img class="favorite" src="images/vector-files/heart.svg" alt="В Избранное">
                   <span class="visually-hidden">Избранное</span>
                   <div class="count-favorites">
                     <span class="count">12</span>
@@ -48,13 +48,18 @@
       </header>
 
       <main class="main-index">
-        <section class="description">
-          <h1 class="visually-hidden">Город СЕДОНА</h1>
-          <img class="welcom-sedona" width="457" height="352" src="images/vector-files/welcome.svg" alt="Добро пожаловать в Седону.">
+        <div class="hero">
+          <section class="welcome">
+            <h1 class="visually-hidden">Город СЕДОНА</h1>
+            <img class="welcom-sedona" width="457" height="352" src="images/vector-files/welcome.svg" alt="Добро пожаловать в Седону.">
+            
+          </section>
+          <section class="description">
+            <h2>СЕДОНА - НЕБОЛЬШОЙ ГОРОДОК В АРИЗОНЕ, ЗАСЛУЖИВАЮЩИЙ БОЛЬШЕГО!</h2>
+            <p>Рассмотрим причины, по которым Седона круче, чем Гранд-каньон!</p>
+          </section>
+        </div>
 
-          <h2>СЕДОНА - НЕБОЛЬШОЙ ГОРОДОК В АРИЗОНЕ, ЗАСЛУЖИВАЮЩИЙ БОЛЬШЕГО!</h2>
-          <p>Рассмотрим причины, по которым Седона круче, чем Гранд-каньон!</p>
-        </section>
         <section class="advantages">
           <h2 class="visually-hidden">Приемущества</h2>
           <ul class="advantages-list">
@@ -153,14 +158,12 @@
           <h1 class="visually-hidden">Контакты</h1>
         <a class="contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
         </section>
-        <section class="footer-logo">
 
+        <section class="footer-logo">
           <span class="visually-hidden">Логотип</span>
           <a href="https://htmlacademy.ru/">
             <img src="images/vector-fils/logo-htmlacademy.svg" alt="HTML-logo">
           </a>
-
-
         </section>
 
       </footer>
