--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
 
   <div class="wrapper">
+
     <body>
       <header class="main-header">
         <img class="logo" src="images/vector-files/logo.svg" width="140" height="70" alt="Логотип Седоны.">
@@ -53,12 +54,14 @@
       </header>
 
       <main class="main-index">
+
         <div class="hero">
           <section class="welcome">
             <h1 class="visually-hidden">Город СЕДОНА</h1>
             <img class="welcome-sedona" width="457" height="352" src="images/vector-files/welcome.svg" alt="Добро пожаловать в Седону.">
-
+            <img  class="bottom-vector" width="1200" height="57" src="images/vector-files/titul-bottom-side.svg" alt="#">
           </section>
+
         </div>
 
         <section class="advantages">
@@ -68,12 +71,12 @@
           </section>
           <h2 class="visually-hidden">Приемущества</h2>
           <ul class="advantages-list">
-            <li class="advantages-item blue">
+            <li class="advantages-item-accent blue">
               <div class="reasons">
                 <h3 class="advantages-title">НАСТОЯЩИЙ ГОРОДОК</h3>
                 <p class="advantages-description">Седона - не аттракцион для туристов, там течет своя жизнь</p>
-                <img class="advantages-sedona sedona-pic" src="images/photos/sedona-view.jpg" width="800" height="385" alt="Вид на Седону.">
               </div>
+                <img class="advantages-sedona sedona-pic" src="images/photos/sedona-view.jpg" width="800" height="385" alt="Вид на Седону.">
             </li>
             <li class="advantages-item transparent">
               <h3 class="advantages-title">НЕБОЛЬШАЯ ПЛОЩАДЬ</h3>
@@ -87,10 +90,12 @@
               <h3 class="advantages-title">МАЛО ТУРИСТОВ</h3>
               <p class="text advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
             </li>
-            <li class="advantages-item blue">
-              <h3 class="advantages-title">ТАМ ЕСТЬ МОСТ ДЬЯВОЛА</h3>
-              <p class="advantages-description">Да, по нему можно проити! Если вы осмелитесь, разумеется</p>
+            <li class="advantages-item-accent blue">
               <img class="sedona-view sedona-pic" src="images/photos/devil-view-min.jpg" width="800" height="385" alt="Мост Дьявола.">
+              <div class="advantages-item">
+                <h3 class="advantages-title">ТАМ ЕСТЬ МОСТ ДЬЯВОЛА</h3>
+                <p class="advantages-description">Да, по нему можно проити! Если вы осмелитесь, разумеется</p>
+              </div>
             </li>
           </ul>
         </section>
@@ -139,50 +144,48 @@
         </section>
       </main>
 
+
       <footer class="main-footer">
-           <section class="footer-sosial">
-            <h3 class="visually-hidden">Социальные сети</h3>
-            <ul class="footer-sosial-list">
-              <li class="footer-sosial-item">
-                <a class="button" href="https://vk.com/htmlacademy">
-                  <span class="visually-hidden">Вконтакте</span>
-                  <img src="images/vector-files/vk.svg" alt="Вконтакте">
-                </a>
-              </li>
-              <li class="footer-sosial-item">
-                <a class="button" href="https://t.me/htmlacademy ">
-                  <span class="visually-hidden">Телеграм</span>
-                  <img src="images/vector-files/tg.svg" alt="Телеграм">
-                </a>
-              </li>
-              <li class="footer-sosial-item">
-                <a class="button" href="https://www.youtube.com/user/htmlacademyru">
-                  <span class="visually-hidden">Ютуб</span>
-                  <img src="images/vector-files/utube.svg" alt="Ютуб">
-                </a>
-              </li>
-            </ul>
-          </section>
+        <div class="footer-general">
 
-          <section class="contacts">
-            <h3 class="visually-hidden">Контакты</h3>
-          <a class="contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
-          </section>
-
-          <section class="footer-logo">
-            <h3 class="visually-hidden">Логотип</h3>
-            <span class="visually-hidden">Логотип</span>
-            <a href="https://htmlacademy.ru/">
-              <img src="images/vector-files/logo-htmlacademy.svg" alt="HTML-logo">
-            </a>
-          </section>
-
-
+          <section class="footer-sosial">
+           <h3 class="visually-hidden">Социальные сети</h3>
+           <ul class="footer-sosial-list">
+             <li class="footer-sosial-item">
+               <a class="button" href="https://vk.com/htmlacademy">
+                 <span class="visually-hidden">Вконтакте</span>
+                 <img src="images/vector-files/vk.svg" alt="Вконтакте">
+               </a>
+             </li>
+             <li class="footer-sosial-item">
+               <a class="button" href="https://t.me/htmlacademy ">
+                 <span class="visually-hidden">Телеграм</span>
+                 <img src="images/vector-files/tg.svg" alt="Телеграм">
+               </a>
+             </li>
+             <li class="footer-sosial-item">
+               <a class="button" href="https://www.youtube.com/user/htmlacademyru">
+                 <span class="visually-hidden">Ютуб</span>
+                 <img src="images/vector-files/utube.svg" alt="Ютуб">
+               </a>
+             </li>
+           </ul>
+         </section>
+         <section class="contacts">
+           <h3 class="visually-hidden">Контакты</h3>
+         <a class="contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+         </section>
+         <section class="footer-logo">
+           <h3 class="visually-hidden">Логотип</h3>
+           <span class="visually-hidden">Логотип</span>
+           <a href="https://htmlacademy.ru/">
+             <img src="images/vector-files/logo-htmlacademy.svg" alt="HTML-logo">
+           </a>
+         </section>
+        </div>
       </footer>
     </body>
   </div>
-
-
 
 
 </html>
