--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
               </a>
             </li>
             <li class="navigation-item want-here">
-              <a class="link navigation-link button-want-here" href="#">Хочу сюда!</a>
+              <a class="link button-navigation-link button-want-here" href="#">Хочу сюда!</a>
             </li>
           </ul>
 
@@ -76,29 +76,29 @@
           <ul class="advantages-list">
             <li class="advantages-item-accent blue">
               <div class="reasons">
-                <h3 class="advantages-title">НАСТОЯЩИЙ ГОРОДОК</h3>
+                <h3 class="advantages-title">НАСТОЯЩИЙ <br>ГОРОДОК</h3>
                 <p class="advantages-description">Седона - не аттракцион для туристов, там течет своя жизнь</p>
               </div>
               <img class="advantages-sedona sedona-pic" src="images/photos/sedona-view.jpg" width="800" height="385"
                 alt="Вид на Седону.">
             </li>
             <li class="advantages-item transparent">
-              <h3 class="advantages-title">НЕБОЛЬШАЯ ПЛОЩАДЬ</h3>
+              <h3 class="advantages-title">НЕБОЛЬШАЯ <br>ПЛОЩАДЬ</h3>
               <p class="text advantages-description">Все достопримичательности находятся очень близко</p>
             </li>
             <li class="advantages-item light-blue">
-              <h3 class="advantages-title">КРАСИВАЯ ДОРОГА</h3>
+              <h3 class="advantages-title">КРАСИВАЯ <br>ДОРОГА</h3>
               <p class="text advantages-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
             </li>
             <li class="advantages-item transparent">
-              <h3 class="advantages-title">МАЛО ТУРИСТОВ</h3>
+              <h3 class="advantages-title">МАЛО <br>ТУРИСТОВ</h3>
               <p class="text advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
             </li>
             <li class="advantages-item-accent blue">
               <img class="sedona-view sedona-pic" src="images/photos/devil-view-min.jpg" width="800" height="385"
                 alt="Мост Дьявола.">
               <div class="advantages-item">
-                <h3 class="advantages-title">ТАМ ЕСТЬ МОСТ ДЬЯВОЛА</h3>
+                <h3 class="advantages-title">ТАМ ЕСТЬ<br> МОСТ ДЬЯВОЛА</h3>
                 <p class="text advantages-description">Да, по нему можно проити! Если вы осмелитесь, разумеется</p>
               </div>
             </li>
@@ -137,7 +137,7 @@
 <!--подписаться на рассылку-->
 <section class="subscribe" data-test="subscribe">
   <div class="get-information">
-    <h2 class="get-letters">ПОДПИШИТЕСЬ НА РАССЫЛКУ</h2>
+    <h2 class="get-letters ">ПОДПИШИТЕСЬ НА РАССЫЛКУ</h2>
     <p class="useful">Только полезная информация и никакого спама, <br> честное бойскаутское!</p>
     <form class="newsletter-form" action="https://echo.htmlacademy.ru" method="post">
       <label class="visually-hidden" for="newsletter-email">
@@ -157,7 +157,7 @@
               <li class="footer-sosial-item">
                 <a class="button sosial-link" href="https://vk.com/htmlacademy">
                   <span class="visually-hidden">Вконтакте</span>
-                  <img src="images/vector-files/vk.svg" alt="Вконтакте">
+                  <img class="sosial-icon"  src="images/vector-files/vk.svg" alt="Вконтакте">
                 </a>
               </li>
               <li class="footer-sosial-item">
