:heavy_check_mark: Сборка #6

--- a/6/index.html
+++ b/6/index.html
@@ -200,7 +200,7 @@
         <section class="footer-logo">
           <h3 class="visually-hidden">Логотип</h3>
           <span class="visually-hidden">Логотип</span>
-          <a class="gooter-logo-link" href="https://htmlacademy.ru/">
+          <a class="footer-logo-link" href="https://htmlacademy.ru/">
             <svg class="footer-logo-icon" alt="Логотип" width="115" height="33" viewBox="0 0 115 33"
               fill="currentColor" xmlns="http://www.w3.org/2000/svg">
               <path
