--- a/6/catalog.html
+++ b/6/catalog.html
@@ -75,12 +75,12 @@
             <h1 class="catalog-title">Гостиницы Седоны</h1>
             <!--хдебные крошки-->
             <ul class="breadcrumbs">
-              <li class="breadcrumbs-item">
-                <span class="visually-hidden breadcrumbs-link">
-                  <a class="breadcrumbs-link breadcrumbs-home" href="index.html">Главная
-                </span>
-                <img class="breadcrumbs-icon" src="images/vector-files/bread-crumbs-home.svg" width="13" height="14"
-                  alt="Домой">
+              <li class="breadcrumbs-item breadcrumbs-icon-home">
+                <a class="breadcrumbs-link breadcrumbs-home" href="index.html">
+                  <span class="visually-hidden breadcrumbs-link">
+                    Главная
+                  </span>
+                </a>
                 </a>
               </li>
               <li class="breadcrumbs-item">
@@ -95,12 +95,14 @@
               <h2 class="visually-hidden">Фильтры для подбора гостиниц</h2>
               <form class="catalog-filter" action="https://echo.htmlacademy.ru" method="get">
                 <fieldset class="catalog-filter-group">
-                  <legend class="catalog-filter-title">Инфраструктура</legend>
+                  <legend class="catalog-filter-title">Инфраструктура:</legend>
                   <ul class="catalog-filter-list">
                     <li class="catalog-filter-item">
                       <label class="control">
                         <input class="control-input" type="checkbox" name="pool" checked>
-                        Бассейн
+                        <span class="control-mark">
+                        </span>
+                        <span class="control-label">Бассейн</span>
                       </label>
                     </li>
                     <li class="catalog-filter-item">
@@ -117,52 +119,68 @@
                     </li>
                   </ul>
                 </fieldset>
-
-                <fieldset class="catalog-filter-group">
-                  <legend class="catalog-filter-title">Тип жилья</legend>
-                  <ul class="catalog-filter-list">
-                    <li class="catalog-filter-item">
-                      <label class="control">
-                        <input class="control-input" type="radio" name="product-group" value="hotel" checked>
-                        Гостиница
-                      </label>
-                    </li>
-                    <li class="catalog-filter-item">
-                      <label class="control">
-                        <input class="control-input" type="radio" name="product-group" value="motel">
-                        Мотель
-                      </label>
-                    </li>
-                    <li class="catalog-filter-item">
-                      <label class="control">
-                        <input class="control-input" type="radio" name="product-group" value="apartamenti">
-                        Апартаменты
-                      </label>
-                    </li>
-                  </ul>
-                </fieldset>
-            </section>
-
-            <section class="catalog-price">
-              <h2 class="visually-hidden">Фильтры</h2>
-              <fieldset class="catalog-price">
-                <legend class="catalog-filter-price">Стоимость, ₽ </legend>
-                <div class="set-price">
-                  <label class="price-conditions">
-                    <input class="min-price" type="text" value="0" name="min-price">
-                  </label>
-                  <label class="price-conditions">
-                    <input class="min-price" type="text" value="9000" name="max-price">
-                  </label>
-                </div>
-              </fieldset>
-            </section>
-
-            <section>
-              <h2 class="filter-button visually-hidden">кнопки фильтров</h2>
-              <button class="button button-apply" type="submit">Применить</button>
-              <button class="button button-reset" type="reset">Сбросить</button>
+                <section class="house-type">
+                  <h2 class="visually-hidden">По типу жилья:</h2>
+                  <fieldset class="catalog-filter-group">
+                    <legend class="catalog-filter-title">Тип жилья</legend>
+                    <ul class="catalog-filter-list">
+                      <li class="catalog-filter-item">
+                        <label class="control">
+                          <input class="control-input" type="radio" name="product-group" value="hotel" checked>
+                          Гостиница
+                        </label>
+                      </li>
+                      <li class="catalog-filter-item">
+                        <label class="control">
+                          <input class="control-input" type="radio" name="product-group" value="motel">
+                          Мотель
+                        </label>
+                      </li>
+                      <li class="catalog-filter-item">
+                        <label class="control">
+                          <input class="control-input" type="radio" name="product-group" value="apartamenti">
+                          Апартаменты
+                        </label>
+                      </li>
+                    </ul>
+                  </fieldset>
+                </section>
+                <section class="catalog-products">
+                  <h2 class="visually-hidden" hidden>Список товаров с фильтрами</h2>
+                  <!-- Фильтрация -->
+                  <form class="catalog-filter" action="https://echo.htmlacademy.ru/" method="get">
+                    <fieldset class="catalog-filter-group">
+                      <legend class="catalog-filter-title">Стоимость, ₽:</legend>
+                      <div class="range-wrapper-inputs">
+                        <label class="catalog-filter-label">
+                          <input class="range-input" type="number" value="0" name="min-price">
+                          от
+                        </label>
+                        <label class="catalog-filter-label">
+                          <input class="range-input" type="number" value="9000" name="max-price">
+                          до
+                        </label>
+                      </div>
+                      <div class="range">
+                        <div class="range-scale">
+                          <div class="range-bar">
+                            <button type="button" class="range-toggle toggle-min">
+                              <span class="visually-hidden">Изменить минимальную цену</span>
+                            </button>
+                            <button type="button" class="range-toggle toggle-max">
+                              <span class="visually-hidden">Изменить максимальную цену</span>
+                            </button>
+                          </div>
+                        </div>
+                      </div>
+                    </fieldset>
+                </section>
+                <section class="filter-button">
+                  <h2 class="filter-button visually-hidden">кнопки фильтров</h2>
+                  <button class="button button-apply" type="submit">Применить</button>
+                  <button class="button button-reset" type="reset">Сбросить</button>
               </form>
+            </section>
             </section>
           </div>
         </header>
@@ -171,7 +189,7 @@
           <section class="sort">
             <h2 class="visually-hidden">Сортировать</h2>
             <p class="founded">Найдено гостиниц: 38</p>
-            <select class="select-options" aria-label="Сортировка">
+            <select class="select-options filter-infrastructure" aria-label="Сортировка">
               <option value="cheap sorting">Сначала дешёвые</option>
               <option value="popular sorting">Сначала популярные</option>
               <option value="expensive sorting">Сначала дорогие</option>
@@ -353,7 +371,7 @@
         <section class="footer-logo">
           <h3 class="visually-hidden">Логотип</h3>
           <span class="visually-hidden">Логотип</span>
-          <a class="gooter-logo-link" href="https://htmlacademy.ru/">
+          <a class="footer-logo-link" href="https://htmlacademy.ru/">
             <svg class="footer-logo-icon" alt="Логотип" width="115" height="33" viewBox="0 0 115 33" fill="currentColor"
               xmlns="http://www.w3.org/2000/svg">
               <path
