добавляет модальное окно

--- a/catalog.html
+++ b/catalog.html
@@ -98,21 +98,22 @@
                   <ul class="catalog-filter-list">
                     <li class="catalog-filter-item">
                       <label class="control">
-                        <input class="control-input" type="checkbox" name="pool" checked>
-                        <span class="control-mark">
-                        </span>
+                        <input class="control-input isually-hidden" type="checkbox" name="pool" checked>
+                        <span class="control-mark"></span>
                         <span class="control-label">Бассейн</span>
                       </label>
                     </li>
                     <li class="catalog-filter-item">
                       <label class="control">
-                        <input class="control-input" type="checkbox" name="parking" checked>
-                        Парковка
+                        <input class="control-input isually-hidden" type="checkbox" name="pool" checked>
+                        <span class="control-mark"></span>
+                        <span class="control-label">Парковка</span>
                       </label>
                     </li>
                     <li class="catalog-filter-item">
                       <label class="control">
-                        <input class="control-input" type="checkbox" name="wi-fi">
+                        <input class="control-input isually-hidden" type="checkbox" name="wi-fi">
+                        <span class="control-mark"></span>
                         Wi-Fi
                       </label>
                     </li>
@@ -125,19 +126,22 @@
                     <ul class="catalog-filter-list">
                       <li class="catalog-filter-item">
                         <label class="control">
-                          <input class="control-input" type="radio" name="product-group" value="hotel" checked>
+                          <input class="control-input isually-hidden" type="radio" name="product-group" value="hotel" checked>
+                          <span class="control-mark-radio"></span>
                           Гостиница
                         </label>
                       </li>
                       <li class="catalog-filter-item">
                         <label class="control">
-                          <input class="control-input" type="radio" name="product-group" value="motel">
+                          <input class="control-input isually-hidden" type="radio" name="product-group" value="motel">
+                          <span class="control-mark-radio"></span>
                           Мотель
                         </label>
                       </li>
                       <li class="catalog-filter-item">
                         <label class="control">
-                          <input class="control-input" type="radio" name="product-group" value="apartamenti">
+                          <input class="control-input isually-hidden" type="radio" name="product-group" value="apartamenti">
+                          <span class="control-mark-radio"></span>
                           Апартаменты
                         </label>
                       </li>
