скрывает модальное окно

--- a/catalog.html
+++ b/catalog.html
@@ -91,7 +91,7 @@
           <div class="main-filter">
             <section class="catalog-hotels" data-test="filter">
               <h2 class="visually-hidden">Фильтры для подбора гостиниц</h2>
-               <form class="catalog-filter" action="https://echo.htmlacademy.ru" method="get">
+              <form class="catalog-filter" action="https://echo.htmlacademy.ru" method="get">
                 <fieldset class="catalog-filter-group">
                   <legend class="catalog-filter-title">Инфраструктура:</legend>
                   <ul class="catalog-filter-list">
@@ -118,6 +118,7 @@
                     </li>
                   </ul>
                 </fieldset>
+                
                 <section class="house-type">
                   <h2 class="visually-hidden">По типу жилья:</h2>
                   <fieldset class="catalog-filter-group">
@@ -125,7 +126,8 @@
                     <ul class="catalog-filter-list">
                       <li class="catalog-filter-item">
                         <label class="control">
-                          <input class="control-input isually-hidden" type="radio" name="product-group" value="hotel" checked>
+                          <input class="control-input isually-hidden" type="radio" name="product-group" value="hotel"
+                            checked>
                           <span class="control-mark-radio"></span>
                           Гостиница
                         </label>
@@ -139,7 +141,8 @@
                       </li>
                       <li class="catalog-filter-item">
                         <label class="control">
-                          <input class="control-input isually-hidden" type="radio" name="product-group" value="apartamenti">
+                          <input class="control-input isually-hidden" type="radio" name="product-group"
+                            value="apartamenti">
                           <span class="control-mark-radio"></span>
                           Апартаменты
                         </label>
@@ -181,8 +184,8 @@
                   <h2 class="filter-button visually-hidden">кнопки фильтров</h2>
                   <button class="button button-apply" type="submit">Применить</button>
                   <button class="button button-reset" type="reset">Сбросить</button>
-                  </section>
-               </form>
+                </section>
+              </form>
             </section>
             </section>
           </div>
